Fixup wrong width in emails input (when inviting users to a public draw)

--- a/static/css/eas-draw-base.css
+++ b/static/css/eas-draw-base.css
@@ -86,8 +86,7 @@ a.fa:focus {
 
 
 #public-draw-invite #emails {
-    min-width: 60px;
-    width: 450px;
+    width: 100%;
 }
 
 /* Slidebar to choose the level of access to public draws */
